feat: read column information from INFORMATION_SCHEMA
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>